# llmwikify

./: .gitignore  .wiki-config.yaml.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_RECOVERY_NOTES.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  MIGRATION.md  MODULARIZATION_REPORT.md  Makefile  PLAN.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  opencode.json  pyproject.toml
.claude/agents/: wikify-adversarial-verifier.md  wikify-phase-researcher.md  wikify-research-planner.md  wikify-synthesizer.md
.claude/workflows/: llmwikify-research.js
.github/workflows/: dependency-review.yml  e2e.yml  lint.yml  prompt_quality.yml  publish-on-tag.yml  publish.yml  release-drafter.yml  tests.yml  version-bump.yml
.opencode/plans/: react-research-engine.md  v0.15.0.md
TopicResearch/: 01-plan.md  02-data-sources.md  03-review-2007-nonferrous.md  04-current-ai-landscape.md  05-mega-ipo-analysis.md  06-signal-framework.md  README.md
TopicResearch/report/: add_charts_to_docx.py  add_impossible_triangle.py  add_impossible_triangle_chart.py  assemble_final_docx.py  chart_data.xlsx  data-verification.md  executive-summary.md  export_chart_data.py  export_leverage_data.py  fetch_macro_data.py  fetch_nominal_gdp.py  fetch_real_gdp.py  fix_formatting.py  fix_numbering.py  full-report.md  generate_charts.py  generate_docx.py  generate_macro_charts.py  leverage_data_2005_2025.xlsx  macro-comparison.md  process_macro_data.py  reorganize_docx.py  update_debt_table.py  update_debt_table_full.py  update_docx_macro.py  update_ipo_section.py  update_s2_section.py  update_viewpoint5.py  复盘05-07有色vs当前AI板块投资研究.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.10.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.11.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.4.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.5.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.6.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.7.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.8.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较 v2.9.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较2.docx  复盘2005–2007年有色金属超级周期与当前AI板块投资的结构性比较2_backup.docx  蒙代尔不可能三角与中国宏观经济政策研究报告.md
TopicResearch/slides/: chart_data.js  chart_data_extended.js  index.html  shcomp_data.js
archive/llmwikify_v0_41_legacy/: README.md  test_token_truncation.py  (+1 more)
docker-tests/: .dockerignore  Dockerfile  Dockerfile.e2e-runner  Dockerfile.server  README.md  docker-compose.yml  e2e-entrypoint.sh  entrypoint.sh  run-compose.sh  run-e2e.sh  run.sh  server-entrypoint.sh
docs/: AGENT_INTEGRATION_PLAN.md  CONFIGURATION_GUIDE.md  CONFIG_GUIDE.md  KNOWN_ISSUES.md  LLM_WIKI_PRINCIPLES.md  MCPORTER_DEPLOYMENT.md  MCP_SETUP.md  MIGRATION_v0.36.md  MIGRATION_v0.38.md  ONBOARDING.md  P3_INGEST_LINT_DESIGN.md  QMD_SETUP.md  README.md  REFERENCE_TRACKING_GUIDE.md  SINK_DESIGN_DECISIONS.md  TODO.md  TUTORIAL.md  USAGE_MODES.md  WEBUI_UNIFIED_SERVER.md  agent-backend-implementation-plan.md  agent-framework-design.md  agent-ui-optimization-plan.md  cli-help-and-aliases.md  deep-research-implementation-plan.md  dynamic-workflow-dsl.md  dynamic-workflow-impl.md  dynamic-workflows-guide.md  dynamic-workflows-research.md  llm-inventory.md  quantnodes.md  refactoring-engine-py.md  wiki-backend-interface.md  workflow-optimization-plan.md
examples/: README.md  basic_usage.py  integrate_with_django.py  integrate_with_flask.py  mcp_agent.py  mining-news-wiki.yaml  research-wiki.yaml  run_server.py  verify_playbooks.sh
factors/: README.md  index.yaml
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  manifest.json
plan/: README.md  multi_factor_paper.md
quant/: factor.duckdb  index.md
scripts/: README.md  __init__.py  aggregate_alpha_results.py  analyze_alpha_results.py  check_architecture.py  check_prompt_principles.py  compare_old_vs_new.py  convert_long_to_h5.py  cross_validate_factor.py  deep_compare_alphalens.py  demo_react_self_repair.py  eval_prompts.py  fix_definition_from_pass2.py  fix_swot_slide.py  merge_alpha_data.py  migrate_autoresearch_v3_to_v4.py  migrate_db_v1_to_v2.py  migrate_factors.py  migrate_wiki_factors_to_factor.py  migrate_wiki_paths.py  repair_corrupted_ppt_task.py  report_to_tutorial.py  run_101_alphas.py  run_101_alphas_v2.py  run_paper.py  smoke_v036.py  smoke_v037.py  stage_c_debug_llm.py  stage_c_e2e_smoke.py  test_one_factor_llm_code.py  unified_tutorial_generator.py  validate_alphalens.py  validate_backtrader.py  validate_qn_nodes.py  validate_summary.md
tests/: conftest.py  llm_comparison_report.md  run_real_world_tests.sh  test_agent_db.py  test_agent_layer.py  test_api_multi_wiki.py  test_api_routes.py  test_apps_agent_core_service.py  test_apps_agent_skill_adapter_always.py  test_apps_agent_skill_adapter_subagent_wire.py  test_apps_agent_skill_tool_adapter.py  test_apps_api_openai.py  test_apps_chat_agent_agent_runner.py  test_apps_chat_agent_agent_service.py  test_apps_chat_agent_autocompact.py  test_apps_chat_agent_chat_react_bridge.py  test_apps_chat_agent_confirmation_manager.py  test_apps_chat_agent_context_manager.py  test_apps_chat_agent_execution_context.py  test_apps_chat_agent_goal_predicate.py  test_apps_chat_agent_goal_state.py  test_apps_chat_agent_orchestrator_done.py  test_apps_chat_agent_orchestrator_research_run_id.py  test_apps_chat_agent_orchestrator_v2.py  test_apps_chat_agent_prompt_builder.py  test_apps_chat_agent_prompt_builder_goal.py  test_apps_chat_agent_prompt_builder_runtime_context.py  test_apps_chat_agent_react_engine.py  test_apps_chat_agent_react_loop.py  test_apps_chat_agent_research_routing.py  test_apps_chat_agent_runner.py  test_apps_chat_agent_runner_v2.py  test_apps_chat_agent_runner_v2_goal.py  test_apps_chat_agent_service.py  test_apps_chat_agent_service_autocompact.py  test_apps_chat_agent_service_phase7.py  test_apps_chat_agent_session_manager.py  test_apps_chat_agent_stream_runner_events.py  test_apps_chat_agent_subagent_manager.py  test_apps_chat_autoresearch_compound_skill.py  (+205 more)
wiki/: index.md  log.md
(+2546 files in other folders)
